<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.aleksa.conveniencestorestockmanagement.fragment.DashboardFragment"
        android:label="@string/nav_dashboard" />

    <fragment
        android:id="@+id/productsFragment"
        android:name="com.aleksa.conveniencestorestockmanagement.fragment.ProductsFragment"
        android:label="@string/nav_products" />

    <fragment
        android:id="@+id/suppliersFragment"
        android:name="com.aleksa.conveniencestorestockmanagement.fragment.SuppliersFragment"
        android:label="@string/nav_suppliers" />

    <fragment
        android:id="@+id/transactionsFragment"
        android:name="com.aleksa.conveniencestorestockmanagement.fragment.TransactionsFragment"
        android:label="@string/nav_transactions" />

    <fragment
        android:id="@+id/stockFragment"
        android:name="com.aleksa.conveniencestorestockmanagement.fragment.StockFragment"
        android:label="@string/nav_stock" />
</navigation>
